manifests/backstage/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage
  namespace: backstage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backstage
  template:
    metadata:
      labels:
        app: backstage
    spec:
      containers:
        - name: backstage
          image: quay.io/skopecky/backstage
          command: ["node"]
          args: []  # added by patch in overlays
          imagePullPolicy: Always
          ports:
            - containerPort: 7007
          securityContext:
            runAsUser: 0
            allowPrivilegeEscalation: true
          volumeMounts:
          - name: ca-cert
            mountPath: "/mnt/certs"
      volumes:
      - name: ca-cert
        secret:
          secretName: hippo-cluster-cert
          items:
          - key: ca.crt
            path: ca.crt
